tests/fail/elaboration/duplicate-field-labels/record-type.snap
stdout = ''
stderr = '''
error: duplicate labels found in record
  ┌─ tests/fail/elaboration/duplicate-field-labels/record-type.fathom:3:23
  │
3 │ { x : Type, y : Type, x : Type }
  │ ----------------------^---------
  │ │                     │
  │ │                     duplicate field
  │ the record literal
  │
  = duplicate fields `x`

'''
